[package]
name = "f7-poc"
version = "0.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bearssl = { path = "../bearssl" }
bearssl-sys = { path = "../bearssl-sys" }
